--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ document.getElementById('reservationForm').addEventListener('submit', async func
 
 async function fetchAvailableDates() {
   try {
-    const response = await fetch("YOUR_GAS_WEB_APP_URL_HERE"); // Palitan ng iyong Web App URL
+    const response = await fetch("https://script.google.com/macros/s/AKfycbzfSijlz-g_jIJZ4VtXaeI4qCBDjA1ZeW3zuSh0VwxPv4i-WXvtyXTL9POWHHPBLok6aw/exec"); // Palitan ng iyong Web App URL
     const data = await response.json();
 
     if (!data.success || !Array.isArray(data.dates)) {
@@ -293,6 +293,38 @@ window.onload = fetchAvailableDates;
       document.getElementById("selectedDateDisplay").textContent = 
         formatDisplayDate(e.target.value);
     });
+
+
+async function submitReservation(event) {
+  event.preventDefault();
+  const formData = {
+    name: document.getElementById("name").value,
+    idNumber: document.getElementById("idNumber").value,
+    dateReserved: document.getElementById("dateReserved").value
+  };
+
+  try {
+    const response = await fetch("https://script.google.com/macros/s/AKfycbzfSijlz-g_jIJZ4VtXaeI4qCBDjA1ZeW3zuSh0VwxPv4i-WXvtyXTL9POWHHPBLok6aw/exec", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(formData)
+    });
+
+    const result = await response.json();
+    if (result.success) {
+      document.getElementById("successModal").style.display = "flex";
+      document.getElementById("reservationForm").reset();
+    } else {
+      throw new Error(result.message);
+    }
+  } catch (error) {
+    console.error("Error:", error);
+    alert("Reservation failed. Please try again.");
+  }
+}
+
+document.getElementById("reservationForm").addEventListener("submit", submitReservation);
+
 
     // Initialize on page load
  window.onload = () => {
